// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonLink no user account 1`] = `
<DocumentFragment>
  <span
    class="a"
    data-tooltip="alice@example.com"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
    >
      Github User:
    </span>
    alice
  </span>
</DocumentFragment>
`;

exports[`PersonLink with user account 1`] = `
<DocumentFragment>
  <a
    class="a b"
    data-tooltip="Alice Smith <alice@example.com>"
    href="u"
  >
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
    >
      Github User:
    </span>
    alice
  </a>
</DocumentFragment>
`;
